# mc_lang

./: README.md  pyproject.toml  summary.json  supplements.json  update.py
.github/workflows/: update.yml
full/: de_de.json  en_us.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  ko_kr.json  lzh.json  nl_nl.json  pt_br.json  ru_ru.json  th_th.json  uk_ua.json  vi_vn.json  zh_cn.json  zh_hk.json  zh_tw.json
valid/: de_de.json  en_us.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  ko_kr.json  lzh.json  nl_nl.json  pt_br.json  ru_ru.json  th_th.json  uk_ua.json  vi_vn.json  zh_cn.json  zh_hk.json  zh_tw.json
